--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "@parcel/resolver-default": {
+    "packageExports": true
+  },
   "name": "food-fortress",
   "version": "1.0.0",
   "description": "",
@@ -11,11 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.15.2"
+    "parcel": "^2.15.4"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.40.1"
+    "react-router": "^7.8.1",
+    "react-router-dom": "^7.8.1",
+    "tailwindcss": "^4.1.12"
   }
 }
