Add backend & implement InfinteScroll functionality

--- a/package.json
+++ b/package.json
@@ -8,20 +8,39 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "dev:web": "parcel src/index.html",
+    "dev:api": "nodemon server/server.mjs",
+    "dev:all": "concurrently \"npm run dev:web\" \"npm run dev:api\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.15.4"
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "concurrently": "^9.2.0",
+    "events": "^3.3.0",
+    "https-browserify": "^1.0.0",
+    "nodemon": "^3.1.10",
+    "parcel": "^2.15.4",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.12",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "fetch-cookie": "^3.1.0",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.8.1",
     "react-router-dom": "^7.8.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "tough-cookie": "^6.0.0"
   }
 }
