--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "url": "^0.11.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.12",
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -38,6 +39,7 @@
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.8.1",
     "react-router-dom": "^7.8.1",
     "tailwindcss": "^4.1.12",
