--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "parcel src/index.html",
     "build": "parcel build index.html",
     "dev:web": "parcel src/index.html",
@@ -17,11 +17,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
+    "babel-jest": "^30.0.5",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "concurrently": "^9.2.0",
     "events": "^3.3.0",
     "https-browserify": "^1.0.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "nodemon": "^3.1.10",
     "parcel": "^2.15.4",
     "path-browserify": "^1.0.1",
