--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "url": "^0.11.4"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.27.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.12",
+    "@testing-library/jest-dom": "^6.8.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "fetch-cookie": "^3.1.0",
