--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,53 @@
-# dependencies
+# ---- Node / package managers ----
 node_modules/
-
-# builds & caches
-dist/
-build/
-.out/
-.vite/
-.cache/
-coverage/
-.tmp/
-.parcel-cache/
-
-# env & secrets
-.env
-.env.*
-!.env.example
-
-# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 *.log
+*.log.*
 
-# editors/IDE
-.vscode/
-.idea/
+# ---- Parcel / build outputs ----
+.parcel-cache/
+.cache/
+dist/
 
-# OS cruft
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# tests & tooling (optional)
+# ---- Tests / coverage ----
+coverage/
+.nyc_output/
+.eslintcache
+*.tsbuildinfo
+playwright-report/
+test-results/
 cypress/videos/
 cypress/screenshots/
 
-
-node_modules/
-dist/
-.parcel-cache/
+# ---- Environment files (use Vercel env vars instead) ----
 .env
 .env.*
-*.lognode_modules/
-dist/
-.parcel-cache/
-node_modules/
-dist/
-.parcel-cache/
-node_modules/
-dist/
-.parcel-cache/
+!.env.example
+
+# ---- Vercel ----
+.vercel/
+
+# ---- Editors / IDEs ----
+.vscode/
+.idea/
+
+# ---- OS junk ----
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# ---- Misc temp/artifacts ----
+*.pid
+*.pid.lock
+*.seed
+*.swp
+*.swo
+*.zip
+*.tar
+*.tgz
+*.gz
